--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* Optimized CSS - Merged index.css and main.css */
+
 :root {
   --site-color-01: rgb(251, 41, 139);
   --site-color-01-hover: rgb(209, 6, 101);
@@ -7,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  align-content: center;
+  align-items: center;
   display: flex;
   justify-items: center;
   flex-direction: column;
@@ -22,11 +24,6 @@ body:after {
   z-index: -1;
   content: url(../img/facebookcolor.png) url(../img/linkedinlogo.png)
     url(../img/youtube.png) url(../img/instagram-logo.png);
-}
-
-.wrapper-main {
-  width: 1000px;
-  margin: 0 auto;
 }
 
 h1 {
@@ -74,7 +71,6 @@ a {
 
 .header-main {
   position: fixed;
-  top: 0;
   width: 100%;
   height: 60px;
   background-color: white;
@@ -86,7 +82,7 @@ a {
 .header-main-logo {
   width: fit-content;
   height: 100%;
-  padding-left: 15px;
+  padding-left: 80px;
   display: flex;
 }
 
@@ -107,21 +103,16 @@ a {
 
 .header-main-nav ul li a {
   padding: 0 10px;
-  font-family: "Roboto Flex", sans-serif;
+  font-family: Roboto;
   line-height: 30px;
-  color: rgb(0, 0, 0);
   display: block;
   height: 100%;
-}
-
-.header-main-nav ul li a:hover {
-  color: rgb(0, 0, 0);
 }
 
 .header-main-sm {
   width: 120;
   height: 100%;
-  padding-right: 20px;
+  padding-right: 70px;
   display: flex;
   align-items: center;
   column-gap: 10px;
@@ -181,7 +172,7 @@ a {
 /* Global Responsiveness */
 @media (max-width: 1024px) {
   .wrapper-main {
-    width: 90%;
+    width: 100%;
   }
 
   .index-about-content {
@@ -196,6 +187,7 @@ a {
   }
 
   .category-container {
+    margin: 0;
     flex-direction: column;
     align-items: center;
     gap: 20px;
@@ -277,7 +269,7 @@ main {
   position: relative;
   column-gap: 10vh;
   z-index: 200;
-  gap: 50px;
+  margin-bottom: 20px;
 }
 
 main .main-intro h1 {
@@ -290,6 +282,7 @@ main .main-intro h1 {
 main p {
   font-size: 20px;
   line-height: 26px;
+  font-weight: bold;
 }
 
 .cta-buttons {
@@ -320,7 +313,6 @@ main p {
 
 main a {
   margin-top: 30px;
-  font-size: 18px;
   display: block;
   background-color: var(--site-color-01);
   padding: 10px 20px;
@@ -334,7 +326,10 @@ main a:hover {
 main .main-quotes p {
   border-left: 4px solid var(--site-color-01);
   padding-left: 20px;
-  margin: 40px 0;
+  margin: 20px 0;
+  margin-top: 0px;
+  font-weight: bold;
+  font-style: italic;
 }
 
 main .main-quotes p:nth-child(2) {
@@ -365,7 +360,6 @@ main .main-quotes {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 40px;
   width: 100%;
 }
 
@@ -376,7 +370,8 @@ main .main-quotes {
   text-align: center;
   gap: 60px;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
 
 .category-item {
@@ -441,16 +436,18 @@ main .main-quotes {
 }
 
 p span:nth-of-type(1) {
-  font-size: 90px;
+  font-size: 100px;
   font-weight: bold;
   color: #1a253a;
   line-height: 0.8;
+  justify-content: center;
 }
 
 p span:nth-of-type(2) {
   font-size: 18px;
   letter-spacing: 0px;
   color: #1a253a;
+  justify-content: center;
 }
 
 .category-box img {
@@ -459,6 +456,7 @@ p span:nth-of-type(2) {
   object-fit: cover;
   border-radius: 8px;
   position: absolute;
+  justify-content: center;
   top: 0;
   left: 0;
 }
@@ -494,7 +492,6 @@ p span:nth-of-type(2) {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 60px;
 }
 
 .index-about-content {
@@ -514,16 +511,17 @@ p span:nth-of-type(2) {
 }
 
 .index-about-text h3 {
-  font-size: 22px;
+  font-size: 25px;
   color: white;
   margin-bottom: 10px;
   text-align: center;
 }
 
 .index-about-text p {
-  font-size: 14px;
+  font-size: 15px;
   line-height: 1.5;
   color: #ccc;
+  text-align: justify;
 }
 
 .cta-btn {
@@ -548,6 +546,7 @@ p span:nth-of-type(2) {
   flex: 1;
   min-width: 300px;
   margin-top: 0;
+  padding-left: 7%;
 }
 
 .skill {
@@ -619,7 +618,7 @@ p span:nth-of-type(2) {
 /* Category Section Styling */
 .category-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
@@ -650,7 +649,7 @@ p span:nth-of-type(2) {
 
 /* Footer Styling */
 .footer {
-  width: 105%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   background-color: #1a253a;
@@ -687,7 +686,7 @@ p span:nth-of-type(2) {
     padding: 20px;
     height: auto;
     background-size: cover;
-    gap: 50px;
+    gap: 40px;
   }
 
   main .main-intro h1 {
@@ -696,19 +695,8 @@ p span:nth-of-type(2) {
   }
 
   main p {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 24px;
-  }
-
-  .cta-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .btn {
-    width: 100%;
-    text-align: center;
   }
 }
 
@@ -733,76 +721,32 @@ p span:nth-of-type(2) {
     font-size: 36px;
     line-height: 44px;
   }
-
-  main p {
-    font-size: 12px;
-    line-height: 18px;
-  }
-
-  .btn {
-    width: 100%;
-    padding: 8px 15px;
-  }
 }
 
 /* Navigation Bar Styling */
 .header-main {
   background-color: white;
+  width: 110%;
 }
 
 .header-main-nav ul li a {
-  color: black;
+  color: rgb(24, 4, 138);
 }
 
 .header-main-nav ul li a:hover {
   color: rgb(251, 41, 139);
 }
 
-/* Hero Section Image Styling */
-main .main-intro img {
-  border-radius: 15px;
-}
-
 /* Global Responsive Fixes */
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .wrapper-main {
-    width: 90%;
-  }
-
-  main {
-    flex-direction: column;
-    text-align: center;
-    padding: 20px;
-    height: auto;
-    gap: 50px;
-  }
-
-  .index-about-content {
-    flex-direction: column;
-    text-align: center;
+    width: 100%;
   }
 }
 /* Mobile Responsiveness for 768px */
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
-    padding: 10px;
-  }
-
-  .category-section {
-    display: flex;
-    flex-wrap: nowrap; /* Ensures items stay in one row */
-    overflow-x: auto; /* Allows horizontal scrolling */
-  }
-
-  .category-section .category {
-    flex: 0 0 auto;
-    width: 100%; /* Adjust size for mobile */
-  }
-
-  .footer {
-    text-align: center;
-    flex-direction: column;
   }
 }
 
@@ -810,22 +754,5 @@ main .main-intro img {
 @media screen and (max-width: 480px) {
   .container {
     width: 100%;
-    overflow-x: auto; /* Ensures scrolling */
-  }
-
-  .category-section {
-    display: flex;
-    flex-direction: column; /* Stacks items vertically */
-    align-items: center;
-  }
-
-  .category-section .category {
-    width: 100%; /* Full width */
-  }
-
-  .footer {
-    text-align: center;
-    padding: 10px;
-    flex-direction: column;
   }
 }
